bad/bin_op_eq_string_bool.example_compiler_output
ERROR
[1mbad/bin_op_eq_string_bool.lat:3:5: [1;31merror: [0;1moperator == cannot compare values of types `string` and `boolean` because values are not convertible to either of the two types[m
	"" == true;
	   [1;32m^[m
